k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: streamer
    labels:
        name: streamer
