k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
    namespace: streamer
    name: streamer-backend
    labels:
        app: streamer
        component: backend
spec:
    type: LoadBalancer
    ports:
        - port: 80
          targetPort: 9999
          name: http
          protocol: TCP
        - port: 9998
          targetPort: 9998
          name: socket
          protocol: TCP
    selector:
        app: streamer
        component: backend
