k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: streamer-redis
    labels:
        app: streamer
        component: redis
spec:
    ports:
        - port: 6379
          targetPort: 6379
          name: redis
    clusterIP: None
    selector:
        app: streamer
        component: redis
